--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="cloud1" src="images/cloud.png" alt="cloud">
         <img class="moon" src="images/moon copy.png" alt="moon">
         <h1>I'm Shubham</h1>
-        <p class="title2">an Algorithm Artisan</p>
+        <p class="title2">Programmer & Part-Time Student</p>
         <img class="cloud2" src="images/cloud.png" alt="cloud">
         <img src="images/mountain.png" alt="mountain" class="mountain">
     </div>
